testsuite/tests/parse-errors/unclosed_object.ml
(* TEST
 setup-ocamlc.byte-build-env;
 ocamlc_byte_exit_status = "2";
 ocamlc.byte;
 check-ocamlc.byte-output;
*)

(* Failed to get the unclosed object error message. *)

let o = object
