testsuite/tests/parse-errors/unclosed_object.compilers.reference
File "unclosed_object.ml", line 11, characters 0-0:
Error: Syntax error: 'end' expected
File "unclosed_object.ml", line 10, characters 8-14:
10 | let o = object
             ^^^^^^
  This 'object' might be unmatched
